fixed steam name spacing

--- a/client/src/components/UserProfile/UserProfile.css
+++ b/client/src/components/UserProfile/UserProfile.css
@@ -38,7 +38,7 @@
   #steam-name-container {
     display: flex;
     align-items: center;
-    margin-top: -4em;
+    margin-top: -3.25em;
     margin-right: 1.25em;
   }
   
